/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.proto;

import "actors_core.proto";
import "core_data.proto";
import "core_messages.proto";

message XRunNamedJob {
    string name = 1;
}

message XStart{
    string shard_entity_id = 1;
}
message XStop{}

message XRecoverReq {
   repeated string address_sharding_entities = 1;
   repeated XMarketId market_ids = 2;
   repeated string requesters = 3;
   int64 batch_id = 4;
}

message XRecoverOrderReq {
    XRawOrder raw_order = 1;
}

message XRecoverOrderRes {
    string order_id = 1;
    bool successful = 2;
}

message XRecoverEnded {
    bool timeout = 1;
}

message XRecoverBatchTimeout{}

message XSubmitOrderReq {
    XRawOrder raw_order = 1;
}

message XRestoreRawOrderReq {
    XRawOrder raw_order = 1;
}

message XRestoreRawOrderRes {
    string id = 1;
}

message XCancelOrderReq {
    string id = 1;
    string owner = 2;
    XOrderStatus status = 3; //取消的类型
    XMarketId market_id = 4;
}

message XCancelOrderRes {
    string id = 1;
    XOrderStatus status = 2; //取消的类型
}

message XSubmitOrder {
    XRawOrder raw_order = 1;
}